<resources>
    <string name="app_name">NewsAPI_AMSA</string>
    <string name="app_display_name">NewsApp</string>

    <!-- NAVIGATION -->
    <string name="title_home">Strona główna</string>
    <string name="title_bookmarks">Zakładki</string>
    <string name="title_search">Szukaj</string>

    <!-- DISPLAY NEWS FRAGMENT -->
    <string name="src_info_label">Przejdź do strony źródłówej:</string>
    <string name="src_button">Źródło strony</string>

    <!-- SEARCH FRAGMENT -->
    <string name="lang_label">Wybór języka:</string>
    <string name="query_label">Zapytanie:</string>
    <string name="query_hint">Zapytanie</string>
    <string name="query_type">Szukaj w:</string>
    <string name="from_label">Artykuły nie starsze niż:</string>
    <string name="sort_label">Sortuj według:</string>

    <!-- SNACK BAR -->
    <string name="snackbar_message">Usunięto news. Czy chcesz go przywrócić?</string>
    <string name="undo_message">Przywróć</string>

    <!-- TOASTS -->
    <string name="toast_added">Dodano news do zakładek</string>
    <string name="toast_removed">Usunięto news z zakładek</string>

    <string name="search_button">Szukaj</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
