<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackOlive"
    tools:context=".ui.search.SearchFragment"
    android:clickable="true"
    android:layout_marginTop="?attr/actionBarSize"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/lang_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="500dp"
        android:background="@color/colorCharlestonGreen"
        android:elevation="6dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/lang_label"
        android:textColor="@color/colorIsabelline"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <Spinner
        android:id="@+id/lang_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:drawSelectorOnTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lang_label"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/query_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/colorFulvous"
        android:elevation="6dp"
        android:orientation="vertical"
        android:textColor="@color/colorCharlestonGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lang_spinner"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/query_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingStart="12dp"
            android:paddingTop="6dp"
            android:paddingEnd="12dp"
            android:paddingBottom="6dp"
            android:text="@string/query_label"
            android:textStyle="bold"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/query_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:fontFamily="sans-serif-condensed"
            android:inputType="textCapSentences"
            android:lines="1"
            android:maxLines="1"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorCharlestonGreen"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/query_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="476dp"
        android:background="@color/colorCharlestonGreen"
        android:elevation="6dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/query_type"
        android:textColor="@color/colorIsabelline"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/query_linear_layout"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/query_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawSelectorOnTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/query_type"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/from_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/colorCharlestonGreen"
        android:elevation="6dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/from_label"
        android:textColor="@color/colorIsabelline"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/query_spinner"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/from_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawSelectorOnTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sort_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/colorCharlestonGreen"
        android:elevation="6dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/sort_label"
        android:textColor="@color/colorIsabelline"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_spinner"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/sort_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawSelectorOnTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_label"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:background="@color/colorFulvous"
        android:fontFamily="sans-serif-condensed"
        android:textSize="18sp"
        android:padding="4dp"
        android:shadowColor="@color/colorCharlestonGreen"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        android:text="@string/search_button"
        android:textColor="@color/colorIsabelline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_spinner"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>